--- a/KRD_App.ipynb
+++ b/KRD_App.ipynb
@@ -1670,7 +1670,7 @@
     "    HELP24 = Message(HELP2WINDOW,text='4: RTK and RTKc are the reference temperatures for K and Kc, if these are not given, assume initial temperature as reference temperature', width=600)\n",
     "    HELP25 = Message(HELP2WINDOW, text='5: Reset will close and re-open the window and reset the variables',width=600)\n",
     "    HELP26 = Message(HELP2WINDOW, text='6: There are 3 potential R value inputs, the top 2 will always be present and are the R values for the K and Kc equations as temperature changes or reference temp is different from current temp. The other is to calculate     CTO = P/RT if there is no volumetric flow rate and it is gas phase', width=600)\n",
-    "    HELP27 = Message(HELP2WINDWO, text ='7: To calculate the R values remember the equation for K is Ko*exp((E/R)*(1/KTR - 1/T) and the Kc dH_rxn replaces E so units will be found using these principles.', width=600)\n",
+    "    HELP27 = Message(HELP2WINDOW, text ='7: To calculate the R values remember the equation for K is Ko*exp((E/R)*(1/KTR - 1/T) and the Kc dH_rxn replaces E so units will be found using these principles.', width=600)\n",
     "    HELP21.pack()\n",
     "    HELP22.pack()\n",
     "    HELP23.pack()\n",
