Allow reset 2 to work

--- a/KRD_App.ipynb
+++ b/KRD_App.ipynb
@@ -1135,13 +1135,15 @@
     "        \n",
     "def reset2():\n",
     "    RXNEQ.destroy()\n",
-    "    RXNAI.destroy()\n",
+    "    if RXNAICHECK == 1:\n",
+    "         RXNAI.destroy()\n",
     "    RXNF()\n",
     "def reset3():\n",
     "    RXNAI.destroy()\n",
     "    additionalinputs()\n",
     "def additionalinputs():\n",
     "    global RXNAI,TEMPCHANGETYPE,HRTinp,CTEinp,CTCPEinp,NMinp,MFRinp,COinp,MPinp,Hvals,Cpvals,CFREinp,COOLANTUAEinp,CONVWANT1\n",
+    "    RXNAICHECK = 1\n",
     "    RXNAI = Toplevel(main)\n",
     "    RXNAI.geometry('1300x900')\n",
     "    TEMPCHANGETYPE = [IVADIABATIC.get(), IVCOCURRENT.get(), IVCOUNTCURRENT.get()]\n",
@@ -1734,6 +1736,7 @@
     "locPT = []\n",
     "MRlets = []\n",
     "MRKK = []\n",
+    "RXNAICHECK = 0\n",
     "\n",
     "RCT = ['CSTR', 'PFR', 'PBR', 'Membrane Reactor']\n",
     "Mtype = ['Gas', 'Liquid']\n",
