Fix Liquid Conversion Calculation
Refer to KRD_App.py for explanation

--- a/KRD_App.ipynb
+++ b/KRD_App.ipynb
@@ -551,9 +551,9 @@
     "        c = [0 for col in range(4)]\n",
     "        for i in range(len(lets)):\n",
     "            if int(REN) == 1:\n",
-    "                c[i] = CAO * (THETA[0][i] + NU[0][i] * CALCCONVERSION) * (TINITIAL / TEMPERATURE) * DIMPRESS / (1 + EPSILON[0] * CALCCONVERSION)\n",
+    "                c[i] = CAO * (THETA[0][i] + NU[0][i] * CALCCONVERSION) * ((TINITIAL / TEMPERATURE) * DIMPRESS / (1 + EPSILON[0] * CALCCONVERSION))**(MtypeT.get() == 'Gas')\n",
     "            else:\n",
-    "                c[i] = CTO * (F[0][i] / FTO) * (TINITIAL / TEMPERATURE) * DIMPRESS\n",
+    "                c[i] = CTO * (F[0][i] / FTO) * ((TINITIAL / TEMPERATURE) * DIMPRESS)**(MtypeT.get() == 'Gas')\n",
     "        SUMCP = sumCP\n",
     "        DCP = dCp\n",
     "    KVAL=[0 for row in range(int(REN))]\n",
@@ -748,9 +748,9 @@
     "        c = [0 for col in range(4)]\n",
     "        for i in range(len(lets)):\n",
     "            if int(REN) == 1:\n",
-    "                c[i] = CAO * (THETA[0][i] + NU[0][i] * CALCCONVERSION) * (TINITIAL / TEMPERATURE) * DIMPRESS / (1 + EPSILON[0] * CALCCONVERSION)\n",
+    "                c[i] = CAO * (THETA[0][i] + NU[0][i] * CALCCONVERSION) * ((TINITIAL / TEMPERATURE) * DIMPRESS / (1 + EPSILON[0] * CALCCONVERSION))**(MtypeT.get() == 'Gas')\n",
     "            else:\n",
-    "                c[i] = CTO * (F[0][i] / FTO) * (TINITIAL / TEMPERATURE) * DIMPRESS\n",
+    "                c[i] = CTO * (F[0][i] / FTO) * ((TINITIAL / TEMPERATURE) * DIMPRESS)**(MtypeT.get() == 'Gas')\n",
     "        SUMCP = sumCP\n",
     "        DCP = dCp\n",
     "    KVAL = [0 for row in range(int(REN))]\n",
@@ -946,9 +946,9 @@
     "        c = [0 for col in range(4)]\n",
     "        for i in range(len(lets)):\n",
     "            if int(REN) == 1:\n",
-    "                c[i] = CAO * (THETA[0][i] + NU[0][i] * CALCCONVERSION) * (TINITIAL / TEMPERATURE) * DIMPRESS / (1 + EPSILON[0] * CALCCONVERSION)\n",
+    "                c[i] = CAO * (THETA[0][i] + NU[0][i] * CALCCONVERSION) * ((TINITIAL / TEMPERATURE) * DIMPRESS / (1 + EPSILON[0] * CALCCONVERSION))**(MtypeT.get() == 'Gas')\n",
     "            else:\n",
-    "                c[i] = CTO *(F[0][i]/FTO) * (TINITIAL / TEMPERATURE) * DIMPRESS\n",
+    "                c[i] = CTO *(F[0][i]/FTO) * ((TINITIAL / TEMPERATURE) * DIMPRESS)**(MtypeT.get() == 'Gas')\n",
     "        SUMCP = sumCP\n",
     "        DCP = dCp\n",
     "    KVAL = [0 for row in range(int(REN))]\n",
